--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,25 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:padding="10dp"
-    android:background="@color/white"
     tools:context=".authentication.LoginActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="Login"
-        android:textColor="@color/indianred"
-        android:textSize="30sp"
-        android:textStyle="bold" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:background="@color/white"
+        android:padding="10dp">
+
+        <TextView
+            android:id="@+id/login_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="10dp"
+            android:text="Login"
+            android:textColor="@color/indianred"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
         <com.google.android.material.textfield.TextInputLayout
+            android:layout_below="@+id/login_text"
             android:id="@+id/email_enter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -48,6 +54,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
+            android:layout_below="@+id/email_enter"
             android:id="@+id/pass_enter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -77,45 +84,44 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="login_clicked"
-        android:padding="10dp"
-        android:paddingStart="20dp"
-        android:text="Sign in"
-        android:textAllCaps="false"
-        android:textSize="20sp"
-        app:icon="@drawable/keyboard_arrow_right"
-        app:iconGravity="end" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/sign_in"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp">
+            android:layout_below="@+id/pass_enter"
+            android:layout_centerHorizontal="true"
+            android:onClick="login_clicked"
+            android:padding="10dp"
+            android:paddingStart="20dp"
+            android:text="Sign in"
+            android:textAllCaps="false"
+            android:textSize="20sp"
+            app:icon="@drawable/keyboard_arrow_right"
+            app:iconGravity="end" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_gravity="center"
-                android:onClick="forget_clicked"
-                android:padding="10dp"
-                android:text="Forgot password?"
-                android:textColor="@color/indianred"
-                android:textSize="16sp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/sign_in"
+            android:layout_alignParentStart="true"
+            android:onClick="forget_clicked"
+            android:padding="10dp"
+            android:text="Forgot password?"
+            android:textColor="@color/indianred"
+            android:textSize="16sp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_gravity="center"
-                android:layout_margin="10dp"
-                android:onClick="create_account_clicked"
-                android:text="No account yet?\nCreate one"
-                android:textAlignment="center"
-                android:textColor="@color/indianred"
-                android:textSize="16sp" />
-        </RelativeLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/sign_in"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="10dp"
+            android:onClick="create_account_clicked"
+            android:text="No account yet?\nCreate one"
+            android:textAlignment="center"
+            android:textColor="@color/indianred"
+            android:textSize="16sp" />
 
-</LinearLayout>
+    </RelativeLayout>
+
+</androidx.core.widget.NestedScrollView>
