--- a/doc/src/main/res/layout/activity_chatting.xml
+++ b/doc/src/main/res/layout/activity_chatting.xml
@@ -35,13 +35,14 @@
         android:weightSum="4">
 
         <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/btn_image"
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:layout_gravity="center_vertical"
             android:layout_weight="0.3"
             android:background="@android:color/transparent"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_baseline_mic_24" />
+            android:src="@drawable/add" />
 
         <EditText
             android:id="@+id/edit_message"
